k8s实例/cassandra-statefulset.yaml
apiVersion: "apps/v1"
kind: StatefulSet
metadata:
  name: cassandra
  labels:
    app: cassandra
spec:
  serviceName: cassandra
  replicas: 3
  selector:
    matchLabels:
      app: cassandra
  template:
    metadata:
      labels:
        app: cassandra
    spec:
      terminationGracePeriodSeconds: 1800
      containers:
        - name: cassandra
          image: 192.168.101.75:5000/k8s-containers/k8s-cassandra:v1.0
          imagePullPolicy: Always
          ports:
            - containerPort: 7000
              name: intra-node
            - containerPort: 7001
              name: tls-intra-node
            - containerPort: 7199
              name: jmx
            - containerPort: 9042
              name: cql
          resources:
            limits:
              cpu: "500m"
              memory: 1Gi
            requests:
              cpu: "500m" 
              memory: 1Gi
          securityContext:
            capabilities:
              add:
                - IPC_LOCK
          lifecycle:
            preStop:
              exec:
                command:
                  - /bin/sh
                  - -c
                  - /usr/local/apache-cassandra/bin/nodetool drain
          readinessProbe:
            exec:
              command:
                - /bin/bash
                - -c
                - /ready-probe.sh
            initialDelaySeconds: 15
            timeoutSeconds: 5
          #command: [ "sh", "-c"]
          #args:
          #  - while true; do
          #      echo -en '\n';
          #      printenv MAX_HEAP_SIZE HEAP_NEWSIZE CASSANDRA_SEEDS CASSANDRA_CLUSTE_NAME;
          #      printenv CASSANDRA_DC CASSANDRA_RACK CASSANDRA_AUTO_BOOTSTRAP POD_IP;
          #      sleep 10;
          #    done;
          volumeMounts:
            - name: cassandra-data
              mountPath: /var/lib/cassandra
  volumeClaimTemplates:
    - metadata:
        name: cassandra-data
        #annotations:
         # volume.beta.kubernetes.io/storage-class: fast
      spec:
        accessModes: ["ReadWriteOnce"]
        resources:
          requests:
            storage: 1Gi
---
# kind: StorageClass
# apiVersion: storage.k8s.io/v1
# metadata:
#   name: fast
# provisioner: k8s.io/minikube-hostpath
# parameters:
#   type: pd-ssd
