k8s实例/some-secret-volume.yaml
apiVersion: v1
kind: Pod
metadata:
  name: volume-test
spec:
  containers:
    - name: container-test
      image: busybox
      volumeMounts:
        - name: all-in-one
          mountPath: "/projected-volume"
          readOnly: true
  volumes:
    - name: all-in-one
      projected:
        sources:
        - secret:
            name: mysecret
            items:
              - key: username
                path: my-group/my-username
        - secret:
            name: mysecret2
            items:
              - key: password
                path: my-group/my-password
                mode: 511
