k8s实例/kube-redis.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: redis-master
  labels:
    name: redis-master
spec:
  ports:
  - port: 6379
    targetPort: 6379
  selector:
    name: redis-master

---
apiVersion: v1
kind: Service
metadata:
  name: redis-slave
  labels:
    name: redis-master
spec:
  ports:
  - port: 6379
  selector:
    name: redis-slave
