k8s实例/kube-redisadmin.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: redisadmin
  labels:
    name: redisadmin
spec:
  type: NodePort
  ports:
  - port: 80
    nodePort: 30001
  selector:
    name: redisadmin
