k8s实例/ingress-resource.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: test-ingress
spec:
  rules:
    - http:
        paths:
          - path: /testpath
            backend: 
              serviceName: test
              servicePort:80
